--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Purring Flamingo</title>
+	<title data-ng-bind="config.app_title">Loading...</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -17,6 +17,7 @@
 	<!-- Angular file manager -->
 	<link rel="stylesheet" href="/bootswatch/paper/bootstrap.min.css" />
 	<link rel="stylesheet" href="/angular-filemanager/dist/angular-filemanager.min.css">
+	<link rel="stylesheet" href="/angular-bootstrap/ui-bootstrap-csp.css">
 
 	<!-- angular-hotkeys -->
 	<link rel="stylesheet" href="/angular-hotkeys/build/hotkeys.css">
@@ -26,30 +27,31 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar" style="margin-bottom: 0;" role="navigation">
-			<div>
-				<a class="navbar-brand" href="/" style="padding-top: 0;" data-ng-cloak>
-					<h1>{{ config.app_title }}</h1>
-					<h2>{{ config.app_subtitle }}</h2>
-				</a>
-				<ul class="nav navbar-nav" data-ng-show="userData.isAuthenticated()" data-ng-cloak>
-					<li><a href="/users">Users</a></li>
-				</ul>
-				<div class="btn-group navbar-right navbar-button" data-ng-show="userData.isAuthenticated()" data-ng-cloak uib-dropdown uib-keyboard-nav>
-					<button id="simple-btn-keyboard-nav" type="button" class="btn btn-default" uib-dropdown-toggle>
-						{{ userData.identity().mobile_phone_number }} <span class="caret"></span>
+		<nav class="navbar navbar-default" role="navigation">
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
 					</button>
-					<ul class="dropdown-menu" uib-dropdown-menu role="menu">
-						<li role="menuitem"><a href="/users/{{ userData.identity()._id}}">Profile</a></li>
-						<li class="divider"></li>
-						<li role="menuitem"><a href="/logout">Logout</a></li>
-					</ul>
+					<a class="navbar-brand" href="/" data-ng-cloak>{{ config.app_title }}</a>
 				</div>
-				<div class="btn-group navbar-right navbar-button" data-ng-show="!userData.isAuthenticated()" data-ng-cloak>
-					<ul class="nav navbar-nav" data-ng-cloak>
-						<li><a href="/">Files</a></li>
-						<li><a href="/users">Manage users</a></li>
-						<li><a href="/logout">Logout</a></li>
+
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav" data-ng-show="loginData.isAuthenticated()" data-ng-cloak>
+						<li data-ng-class="{'active': location.path() === '/' }"><a href="/">Files <span class="sr-only">(current)</span></a></li>
+						<li data-ng-class="{'active': location.path() === '/users' }"><a href="/users">Users</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-ng-cloak role="button" aria-haspopup="true" aria-expanded="false">{{ loginData.identity().name }} <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="/logout">Logout</a></li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 			</div>
