--- a/web/index.html
+++ b/web/index.html
@@ -45,9 +45,9 @@
 						<li data-ng-class="{'active': location.path() === '/' }"><a href="/">Files <span class="sr-only">(current)</span></a></li>
 						<li data-ng-show="loginData.isAdmin()" data-ng-class="{'active': location.path() === '/users' }"><a href="/users">Users</a></li>
 					</ul>
-					<ul class="nav navbar-nav navbar-right">
+					<ul class="nav navbar-nav navbar-right" data-ng-show="loginData.isAuthenticated()" data-ng-cloak>
 						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" data-ng-cloak role="button" aria-haspopup="true" aria-expanded="false">{{ loginData.identity().name }} <span class="caret"></span></a>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ loginData.identity().name }} <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="/logout">Logout</a></li>
 							</ul>
